--- a/src/static/sass/main.scss
+++ b/src/static/sass/main.scss
@@ -1,4 +1,3 @@
-@import "./_variables.scss";
-@import "./_bootstrap-overrides.scss";
-@import "../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "./_home.scss";
+@import "./_labo-component-variables.scss";
+@import "../node_modules/labo-components/sass/labo-components.scss";
+@import "./_mediasuite.scss";
