--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -133,32 +133,34 @@
 </body>
 
 <!-- for the linechart and the API components -->
-<script src="https://d3js.org/d3.v4.min.js"></script>
+<script type="text/javascript" src="/static/vendor/d3/d3.v4.min.js"></script>
 
 <!-- for TimeSlider.jsx -->
-<script src="/static/vendor/noUiSlider.9.2.0/nouislider.min.js"></script>
+<script type="text/javascript" src="/static/vendor/noUiSlider.9.2.0/nouislider.min.js"></script>
 
 <!-- for the player components-->
-<script src="https://player.vimeo.com/api/player.js"></script>
+<script type="text/javascript" src="/static/vendor/vimeo/player.js"></script>
 <script type="text/javascript" src="/static/vendor/jwplayer-7.5.0/jwplayer.js"></script>
 
-<!-- for the image viewer -->
+<!-- OpenSeaDragon + OSD Picturae annotation plugin -->
 <script type="text/javascript" src="/static/node_modules/openseadragon/build/openseadragon/openseadragon.min.js"></script>
 <script type="text/javascript" src="/static/vendor/openseadragonselection-master/dist/openseadragonselection.js"></script>
 
-<!-- Babel is needed to parse the labo-components.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+<!-- CDN link: https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js -->
+<script type="text/javascript" src="/static/vendor/babel-core/browser.min.js"></script>
 
-<!-- React is required for the entire library -->
-<script src="https://unpkg.com/react@15/dist/react.min.js"></script>
-<script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
+<!-- CDN link: https://unpkg.com/react@15/dist/react.min.js -->
+<script type="text/javascript" src="/static/vendor/react/react.min.js"></script>
+
+<!-- CDN link: https://unpkg.com/react-dom@15/dist/react-dom.min.js -->
+<script type="text/javascript" src="/static/vendor/react/react-dom.min.js"></script>
 
 <!-- The component library -->
 <!--<script src="/static/node_modules/labo-components/dist/labo-components.js" type="text/javascript"></script>-->
-<script type="text/javascript" src="/static/dist-dev/labo-components.js"></script>
+<script type="text/javascript" src="/static/dist-dev/dist/labo-components.js"></script>
 
-<!-- The custom JS of this page, which utilizes the component library -->
-<script src="/static/js/component-page.js" type="text/babel"></script>
+<!-- The custom JS of this page, which uses the component library TODO precompile the babel stuff -->
+<script type="text/babel" src="/static/js/component-page.js"></script>
 
 <script type="text/javascript" src="/static/node_modules/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="/static/node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
