--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -20,13 +20,13 @@
 	</div>
 
 	<!-- for the linechart & histogram component -->
-	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<script type="text/javascript" src="/static/vendor/d3/d3.v4.min.js"></script>
 
 	<!-- for TimeSlider.jsx -->
-	<script src="/static/vendor/noUiSlider.9.2.0/nouislider.min.js"></script>
+	<script type="text/javascript" src="/static/vendor/noUiSlider.9.2.0/nouislider.min.js"></script>
 
 	<!-- for the player components-->
-	<script src="https://player.vimeo.com/api/player.js"></script>
+	<script type="text/javascript" src="/static/vendor/vimeo/player.js"></script>
 	<script type="text/javascript" src="/static/vendor/jwplayer-7.5.0/jwplayer.js"></script>
 
 	<!-- for the image viewer -->
@@ -34,12 +34,12 @@
 	<script type="text/javascript" src="/static/vendor/openseadragonselection-master/dist/openseadragonselection.js"></script>
 
 	<!-- React is required for the entire library-->
-	<script src="https://unpkg.com/react@15/dist/react.min.js"></script>
-    <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
+	<script type="text/javascript" src="/static/vendor/react/react.min.js"></script>
+    <script type="text/javascript" src="/static/vendor/react/react-dom.min.js"></script>
 
 	<!-- The component library -->
-	<!--<script src="/static/node_modules/labo-components/dist/labo-components.js" type="text/javascript"></script>-->
-	<script src="/static/dist-dev/labo-components.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/static/node_modules/labo-components/dist/labo-components.js"></script>
+	<!--<script src="/static/dist-dev/dist/labo-components.js" type="text/javascript"></script>-->
 	<script>
 		labo.cookRecipe({{ recipe|tojson|safe }}, {{ params|tojson|safe }}, '{{instanceId}}', 'app');
 	</script>
