--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -68,7 +68,6 @@
                         <div class="collapse in" id="menu_search">
                             <ul class="component-list">
                                 <li><a href="#" onclick="showComponent('Query builder')">Query builder</a></li>
-                                <li><a href="#" onclick="showComponent('Comparative search')">Comparative search</a></li>
                             </ul>
                         </div>
                     </li>
@@ -103,17 +102,18 @@
                         </div>
                     </li>
 
-                    <!-- Data visualisation components -->
+                    <!-- Data visualisation components
                     <li class="component-category">
                         <a href="#" data-toggle="collapse" data-target="#menu_visuals" data-parent="#component_menu" class="category-header">
                             <span class="glyphicon glyphicon-stats"></span>&nbsp;Data visualisations
                         </a>
                         <div class="collapse in" id="menu_visuals">
                             <ul class="component-list">
-                                <li><a href="#" onclick="showComponent('Line chart')">Line chart (TODO)</a></li>
+
                             </ul>
                         </div>
                     </li>
+                    -->
                 </ul>
             </div>
 
