--- a/src/static/sass/_labo-component-variables.scss
+++ b/src/static/sass/_labo-component-variables.scss
@@ -36,6 +36,8 @@ $icon-font-path: "../node_modules/bootstrap-sass/assets/fonts/bootstrap/" !defau
 
 /* annotation */
 
+$highlight-color: $clBlue;
+
 $annotation-label-color: $clDark;
 $annotation-frag-info-color: $clOrange;
 $annotation-prov-info-color: $clDark;
