--- a/src/static/sass/_mediasuite.scss
+++ b/src/static/sass/_mediasuite.scss
@@ -49,6 +49,12 @@
 	}
 }
 
+.app-version {
+	float:right;
+	color:crimson;
+	padding:15px 15px;
+}
+
 .components-header {
 	font-size:110%;
 	color: red;
