--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -65,7 +65,7 @@
 				<li><a href="/userspace">{{'User space' if user != None else 'Login'}}</a></li>
 				{% endif %}
 			</ul>
-
+			<div class="app-version">Version: {{version}}</div>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
 </nav>
