--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -41,7 +41,7 @@
 	<script type="text/javascript" src="/static/node_modules/labo-components/dist/labo-components.js"></script>
 	<!--<script src="/static/dist-dev/dist/labo-components.js" type="text/javascript"></script>-->
 	<script>
-		labo.cookRecipe({{ recipe|tojson|safe }}, {{ params|tojson|safe }}, '{{instanceId}}', 'app');
+		labo.cookRecipe({{ recipe|tojson|safe }}, {{ params|tojson|safe }}, '{{user.id}}', 'app');
 	</script>
 
 	<script type="text/javascript" src="/static/node_modules/jquery/dist/jquery.min.js"></script>
