use API urls from settings

--- a/src/templates/apis.html
+++ b/src/templates/apis.html
@@ -27,9 +27,9 @@
 	<dl class="dl-horizontal">
 		<dt>Collections API</dt>
 		<dd>high-level collection information (metadata: data format, size, etc.)</dd>
-		<dt><a href="http://blofeld.beeldengeluid.nl:5320/#/default" target="_searchapi">Search API</a></dt>
+		<dt><a href="{{searchAPI}}/#/default" target="_searchapi">Search API</a></dt>
 		<dd>searching for collection items.</dd>
-		<dt><a href="http://blofeld.beeldengeluid.nl:5303/#/default" target="_annotationapi">Annotation API</a></dt>
+		<dt><a href="{{annotationAPI}}/#/default" target="_annotationapi">Annotation API</a></dt>
 		<dd>annotating existing data using W3C Web Annotation standard (mainly for manual annotations).</dd>
 		<dt>Data Enrichment API</dt>
 		<dd>collection enrichment through automatic mechanisms  or by human interaction.</dd>
