--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -9343,6 +9343,585 @@ button.close {
   background-color: #ddd;
 }
 
+/* line 2, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle, .react-datepicker-popper[data-placement^="top"] .react-datepicker__triangle, .react-datepicker__year-read-view--down-arrow,
+.react-datepicker__month-read-view--down-arrow {
+  margin-left: -8px;
+  position: absolute;
+}
+
+/* line 8, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle, .react-datepicker-popper[data-placement^="top"] .react-datepicker__triangle, .react-datepicker__year-read-view--down-arrow,
+.react-datepicker__month-read-view--down-arrow, .react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle::before, .react-datepicker-popper[data-placement^="top"] .react-datepicker__triangle::before, .react-datepicker__year-read-view--down-arrow::before,
+.react-datepicker__month-read-view--down-arrow::before {
+  box-sizing: content-box;
+  position: absolute;
+  border: 8px solid transparent;
+  height: 0;
+  width: 1px;
+}
+
+/* line 18, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle::before, .react-datepicker-popper[data-placement^="top"] .react-datepicker__triangle::before, .react-datepicker__year-read-view--down-arrow::before,
+.react-datepicker__month-read-view--down-arrow::before {
+  content: "";
+  z-index: -1;
+  border-width: 8px;
+  left: -8px;
+  border-bottom-color: #aeaeae;
+}
+
+/* line 27, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle {
+  top: 0;
+  margin-top: -8px;
+}
+
+/* line 32, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle, .react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle::before {
+  border-top: none;
+  border-bottom-color: #f0f0f0;
+}
+
+/* line 37, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle::before {
+  top: -1px;
+  border-bottom-color: #aeaeae;
+}
+
+/* line 42, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="top"] .react-datepicker__triangle, .react-datepicker__year-read-view--down-arrow,
+.react-datepicker__month-read-view--down-arrow {
+  bottom: 0;
+  margin-bottom: -8px;
+}
+
+/* line 48, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="top"] .react-datepicker__triangle, .react-datepicker__year-read-view--down-arrow,
+.react-datepicker__month-read-view--down-arrow, .react-datepicker-popper[data-placement^="top"] .react-datepicker__triangle::before, .react-datepicker__year-read-view--down-arrow::before,
+.react-datepicker__month-read-view--down-arrow::before {
+  border-bottom: none;
+  border-top-color: #fff;
+}
+
+/* line 55, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="top"] .react-datepicker__triangle::before, .react-datepicker__year-read-view--down-arrow::before,
+.react-datepicker__month-read-view--down-arrow::before {
+  bottom: -1px;
+  border-top-color: #aeaeae;
+}
+
+/* line 61, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-wrapper {
+  display: inline-block;
+}
+
+/* line 65, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 0.8rem;
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #aeaeae;
+  border-radius: 0.3rem;
+  display: inline-block;
+  position: relative;
+  width: 20rem;
+  height: 20rem;
+}
+
+/* line 78, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__triangle {
+  position: absolute;
+  left: 50px;
+}
+
+/* line 83, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper {
+  z-index: 1;
+}
+
+/* line 87, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="bottom"] {
+  margin-top: 10px;
+  width: 20rem;
+  height: 20rem;
+}
+
+/* line 93, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="top"] {
+  margin-bottom: 6px;
+}
+
+/* line 97, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="right"] {
+  margin-left: 8px;
+}
+
+/* line 101, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="right"] .react-datepicker__triangle {
+  left: auto;
+  right: 42px;
+}
+
+/* line 106, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="left"] {
+  margin-right: 8px;
+}
+
+/* line 110, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker-popper[data-placement^="left"] .react-datepicker__triangle {
+  left: 42px;
+  right: auto;
+}
+
+/* line 115, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__header {
+  text-align: center;
+  background-color: #f0f0f0;
+  border-bottom: 1px solid #aeaeae;
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
+  padding-top: 8px;
+  position: relative;
+  width: 20rem;
+  font-size: 1.2rem;
+}
+
+/* line 127, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-dropdown-container--select,
+.react-datepicker__month-dropdown-container--select,
+.react-datepicker__year-dropdown-container--scroll,
+.react-datepicker__month-dropdown-container--scroll {
+  display: inline-block;
+  margin: 0 2px;
+}
+
+/* line 135, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__current-month {
+  margin-top: 0;
+  color: #000;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+/* line 143, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__navigation {
+  line-height: 1.7rem;
+  text-align: center;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  width: 0;
+  border: 0.55rem solid transparent;
+  z-index: 1;
+}
+
+/* line 154, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__navigation--previous {
+  left: 10px;
+  border-right-color: #ccc;
+}
+
+/* line 159, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__navigation--previous:hover {
+  border-right-color: #b3b2b2;
+}
+
+/* line 163, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__navigation--next {
+  right: 10px;
+  border-left-color: #ccc;
+}
+
+/* line 168, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__navigation--next:hover {
+  border-left-color: #b3b2b2;
+}
+
+/* line 172, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__navigation--years {
+  position: relative;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* line 180, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__navigation--years-previous {
+  top: 4px;
+  border-top-color: #ccc;
+}
+
+/* line 185, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__navigation--years-previous:hover {
+  border-top-color: #b3b2b2;
+}
+
+/* line 189, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__navigation--years-upcoming {
+  top: -4px;
+  border-bottom-color: #ccc;
+}
+
+/* line 194, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__navigation--years-upcoming:hover {
+  border-bottom-color: #b3b2b2;
+}
+
+/* line 198, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__month-container {
+  display: inline;
+  float: left;
+  width: 20rem;
+  height: 20rem;
+}
+
+/* line 205, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__month {
+  margin: 0.4rem;
+  text-align: center;
+}
+
+/* line 210, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__week-number {
+  color: #ccc;
+  display: inline-block;
+  width: 1.7rem;
+  line-height: 1.7rem;
+  text-align: center;
+  margin: 0.166rem;
+}
+
+/* line 219, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__week-number.react-datepicker__week-number--clickable {
+  cursor: pointer;
+}
+
+/* line 223, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__week-number.react-datepicker__week-number--clickable:hover {
+  border-radius: 0.3rem;
+  background-color: #f0f0f0;
+}
+
+/* line 228, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day-name,
+.react-datepicker__day {
+  color: #000;
+  display: inline-block;
+  width: 2.2rem;
+  height: 2rem;
+  line-height: 1.9rem;
+  text-align: center;
+  margin: 0.166rem;
+}
+
+/* line 239, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day {
+  cursor: pointer;
+}
+
+/* line 243, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day:hover {
+  border-radius: 0.3rem;
+  background-color: #f0f0f0;
+}
+
+/* line 248, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--today {
+  font-weight: bold;
+}
+
+/* line 252, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--highlighted {
+  border-radius: 0.3rem;
+  background-color: #3dcc4a;
+  color: #fff;
+}
+
+/* line 258, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--highlighted:hover {
+  background-color: #32be3f;
+}
+
+/* line 262, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--highlighted-custom-1 {
+  color: magenta;
+}
+
+/* line 266, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--highlighted-custom-2 {
+  color: green;
+}
+
+/* line 270, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range {
+  border-radius: 0.3rem;
+  background-color: #216ba5;
+  color: #fff;
+}
+
+/* line 276, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--selected:hover, .react-datepicker__day--in-selecting-range:hover, .react-datepicker__day--in-range:hover {
+  background-color: #1d5d90;
+}
+
+/* line 280, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--keyboard-selected {
+  border-radius: 0.3rem;
+  background-color: #2a87d0;
+  color: #fff;
+}
+
+/* line 286, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--keyboard-selected:hover {
+  background-color: #1d5d90;
+}
+
+/* line 290, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range) {
+  background-color: rgba(33, 107, 165, 0.5);
+}
+
+/* line 294, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__month--selecting-range .react-datepicker__day--in-range:not(.react-datepicker__day--in-selecting-range) {
+  background-color: #f0f0f0;
+  color: #000;
+}
+
+/* line 299, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--disabled {
+  cursor: default;
+  color: #ccc;
+}
+
+/* line 304, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__day--disabled:hover {
+  background-color: transparent;
+}
+
+/* line 308, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__input-container {
+  position: relative;
+  display: inline-block;
+}
+
+/* line 313, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-read-view,
+.react-datepicker__month-read-view {
+  border: 1px solid transparent;
+  border-radius: 0.3rem;
+}
+
+/* line 319, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-read-view:hover,
+.react-datepicker__month-read-view:hover {
+  cursor: pointer;
+}
+
+/* line 324, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-read-view:hover .react-datepicker__year-read-view--down-arrow,
+.react-datepicker__year-read-view:hover .react-datepicker__month-read-view--down-arrow,
+.react-datepicker__month-read-view:hover .react-datepicker__year-read-view--down-arrow,
+.react-datepicker__month-read-view:hover .react-datepicker__month-read-view--down-arrow {
+  border-top-color: #b3b2b2;
+}
+
+/* line 331, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-read-view--down-arrow,
+.react-datepicker__month-read-view--down-arrow {
+  border-top-color: #ccc;
+  float: right;
+  margin-left: 20px;
+  top: 8px;
+  position: relative;
+  border-width: 0.55rem;
+}
+
+/* line 341, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-dropdown,
+.react-datepicker__month-dropdown {
+  background-color: #f0f0f0;
+  position: absolute;
+  width: 50%;
+  left: 25%;
+  top: 30px;
+  z-index: 1;
+  text-align: center;
+  border-radius: 0.3rem;
+  border: 1px solid #aeaeae;
+}
+
+/* line 354, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-dropdown:hover,
+.react-datepicker__month-dropdown:hover {
+  cursor: pointer;
+}
+
+/* line 359, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-dropdown--scrollable,
+.react-datepicker__month-dropdown--scrollable {
+  height: 150px;
+  overflow-y: scroll;
+}
+
+/* line 365, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-option,
+.react-datepicker__month-option {
+  line-height: 20px;
+  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* line 374, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-option:first-of-type,
+.react-datepicker__month-option:first-of-type {
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
+}
+
+/* line 380, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-option:last-of-type,
+.react-datepicker__month-option:last-of-type {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border-bottom-left-radius: 0.3rem;
+  border-bottom-right-radius: 0.3rem;
+}
+
+/* line 390, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-option:hover,
+.react-datepicker__month-option:hover {
+  background-color: #ccc;
+}
+
+/* line 395, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-option:hover .react-datepicker__navigation--years-upcoming,
+.react-datepicker__month-option:hover .react-datepicker__navigation--years-upcoming {
+  border-bottom-color: #b3b2b2;
+}
+
+/* line 400, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-option:hover .react-datepicker__navigation--years-previous,
+.react-datepicker__month-option:hover .react-datepicker__navigation--years-previous {
+  border-top-color: #b3b2b2;
+}
+
+/* line 405, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__year-option--selected,
+.react-datepicker__month-option--selected {
+  position: absolute;
+  left: 15px;
+}
+
+/* line 411, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__close-icon {
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  display: inline-block;
+  height: 0;
+  outline: 0;
+  padding: 0;
+  vertical-align: middle;
+}
+
+/* line 422, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__close-icon::after {
+  background-color: #216ba5;
+  border-radius: 50%;
+  bottom: 0;
+  box-sizing: border-box;
+  color: #fff;
+  content: "\00d7";
+  cursor: pointer;
+  font-size: 12px;
+  height: 16px;
+  width: 16px;
+  line-height: 1;
+  margin: -8px auto 0;
+  padding: 2px;
+  position: absolute;
+  right: 7px;
+  text-align: center;
+  top: 50%;
+}
+
+/* line 442, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__today-button {
+  background: #f0f0f0;
+  border-top: 1px solid #aeaeae;
+  cursor: pointer;
+  text-align: center;
+  font-weight: bold;
+  padding: 5px 0;
+  clear: left;
+}
+
+/* line 452, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__portal {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  left: 0;
+  top: 0;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  z-index: 2147483647;
+}
+
+/* line 465, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__portal .react-datepicker__day-name,
+.react-datepicker__portal .react-datepicker__day {
+  width: 3rem;
+  line-height: 3rem;
+}
+
+@media (max-width: 400px), (max-height: 550px) {
+  /* line 472, ../dist-dev/sass/react-datepicker.scss */
+  .react-datepicker__portal .react-datepicker__day-name,
+  .react-datepicker__portal .react-datepicker__day {
+    width: 2rem;
+    line-height: 2rem;
+  }
+}
+/* line 479, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__portal .react-datepicker__current-month {
+  font-size: 1.44rem;
+}
+
+/* line 483, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__portal .react-datepicker__navigation {
+  border: 0.81rem solid transparent;
+}
+
+/* line 487, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__portal .react-datepicker__navigation--previous {
+  border-right-color: #ccc;
+}
+
+/* line 491, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__portal .react-datepicker__navigation--previous:hover {
+  border-right-color: #b3b2b2;
+}
+
+/* line 495, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__portal .react-datepicker__navigation--next {
+  border-left-color: #ccc;
+}
+
+/* line 499, ../dist-dev/sass/react-datepicker.scss */
+.react-datepicker__portal .react-datepicker__navigation--next:hover {
+  border-left-color: #b3b2b2;
+}
+
 /* line 3, ../sass/_mediasuite.scss */
 .home-separator {
   margin: 50px 0px;
