Update references to vendor libraries now downloaded via NPM

--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -20,13 +20,13 @@
 	</div>
 
 	<!-- for the linechart & histogram component -->
-	<script type="text/javascript" src="/static/vendor/d3/d3.v4.min.js"></script>
+	<script type="text/javascript" src="/static/node_modules/d3/build/d3.min.js"></script>
 
 	<!-- for TimeSlider.jsx -->
-	<script type="text/javascript" src="/static/vendor/noUiSlider.9.2.0/nouislider.min.js"></script>
+    <script type="text/javascript" src="/static/node_modules/nouislider/distribute/nouislider.min.js"></script>
 
 	<!-- for the player components-->
-	<script type="text/javascript" src="/static/vendor/vimeo/player.js"></script>
+	<script type="text/javascript" src="/static/node_modules/@vimeo/player/dist/player.min.js"></script>
 	<script type="text/javascript" src="/static/vendor/jwplayer-7.5.0/jwplayer.js"></script>
 
 	<!-- for the image viewer -->
@@ -34,8 +34,8 @@
 	<script type="text/javascript" src="/static/vendor/openseadragonselection-master/dist/openseadragonselection.js"></script>
 
 	<!-- React is required for the entire library-->
-	<script type="text/javascript" src="/static/vendor/react/react.min.js"></script>
-    <script type="text/javascript" src="/static/vendor/react/react-dom.min.js"></script>
+	<script type="text/javascript" src="/static/node_modules/react/dist/react.min.js"></script>
+    <script type="text/javascript" src="/static/node_modules/react-dom/dist/react-dom.min.js"></script>
 
 	<!-- The component library -->
 	<!--<script type="text/javascript" src="/static/node_modules/labo-components/dist/labo-components.js"></script>-->
