--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -68,7 +68,7 @@
 
 </body>
 
-<script src="/static/node_modules/jquery/dist/jquery.js"></script>
+<script src="/static/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="/static/js/labo.js"></script>
 
 </html>
