--- a/src/templates/recipe-avresearcherxl.html
+++ b/src/templates/recipe-avresearcherxl.html
@@ -30,10 +30,10 @@
 	</div>
 
 	<!-- for the linechart & histogram component -->
-	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<script src="/static/node_modules/d3/build/d3.min.js"></script>
 
 	<!-- for TimeSlider.jsx -->
-	<script src="/static/vendor/noUiSlider.9.2.0/nouislider.min.js"></script>
+	<script src="/static/node_modules/nouislider/distribute/nouislider.min.js"></script>
 
 	<!-- for the player components-->
 	<script type="text/javascript" src="/static/vendor/jwplayer-7.5.0/jwplayer.js"></script>
@@ -43,8 +43,8 @@
 	<script type="text/javascript" src="/static/vendor/openseadragonselection-master/dist/openseadragonselection.js"></script>
 
 	<!-- React is required for the entire library-->
-	<script src="https://unpkg.com/react@15/dist/react.min.js"></script>
-    <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
+    <script type="text/javascript" src="/static/node_modules/react/dist/react.min.js"></script>
+    <script type="text/javascript" src="/static/node_modules/react-dom/dist/react-dom.min.js"></script>
 
 	<!-- The component library -->
 	<script src="/static/public/assets/benglabs.js" type="text/javascript"></script>
