--- a/src/templates/recipe-avresearcherxl.html
+++ b/src/templates/recipe-avresearcherxl.html
@@ -50,7 +50,7 @@
 	<script src="/static/public/assets/benglabs.js" type="text/javascript"></script>
 
 	<!-- Babel is needed to parse the labo-components.js -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+	<script src="/static/node_modules/babel-standalone/babel.min.js"></script>
 
 	<script src="/static/js/clariah/avresearcherxl.js" type="text/babel"></script>
 
