cleaned some SAML/OAuth related code; now using the session object to verify logged inness

--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -1,5 +1,5 @@
 <head>
-	<title>L A B O - Page does not exist</title>
+	<title>CLARIAH media suite - Server fault</title>
     {% include '%s/head.html' % headDir %}
 </head>
 
