--- a/src/templates/recipes.html
+++ b/src/templates/recipes.html
@@ -61,7 +61,7 @@
 
 		<div class="row">
 			<div class="col-md-12">
-				<h3>Searching search</h3>
+				<h3>Search</h3>
 				<br/>
 			</div>
 		</div>
