showing user attributes in user space

--- a/src/templates/userspace.html
+++ b/src/templates/userspace.html
@@ -24,6 +24,7 @@
 		This is your personal and collaborative “work space,” where you can keep track of your (re)search projects, store your bookmarks (selected corpus) or codes (tags), and other annotations you performed while searching and browsing. You can also perform analytical tasks with your corpus and annotations, and export your data. THIS SPACE IS UNDER CONSTRUCTION.
 
 	</div>
+	{{user.attributes}}
 
 </div>
 
