--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -41,8 +41,9 @@
 	<!-- The component library -->
 	<script type="text/javascript" src="/static/node_modules/labo-components/dist/labo-components.js"></script>
 	<script>
-		var _chickenStock = '{{OAuthToken}}';
-		labo.cookRecipe({{ recipe|tojson|safe }}, {{ params|tojson|safe }}, '{{user.id}}', 'app', '{{OAuthToken}}');
+		var _chickenStock = '{{token}}';
+		var _clientId = '{{clientId}}';
+		labo.cookRecipe({{ recipe|tojson|safe }}, {{ params|tojson|safe }}, '{{user.id}}', 'app');
 	</script>
 
 	<script type="text/javascript" src="/static/node_modules/jquery/dist/jquery.min.js"></script>
