--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -43,6 +43,7 @@
 	<script>
 		var _chickenStock = '{{token}}';
 		var _clientId = '{{clientId}}';
+		var _play = '{{play}}';
 		labo.cookRecipe({{ recipe|tojson|safe }}, {{ params|tojson|safe }}, '{{user.id}}', 'app');
 	</script>
 
