labo +1; added bold versions for fonts

--- a/src/static/sass/_mediasuite.scss
+++ b/src/static/sass/_mediasuite.scss
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
 .home-separator {
 	margin:$default-margin * 5 0px;
