--- a/src/static/sass/main.scss
+++ b/src/static/sass/main.scss
@@ -1,3 +1,4 @@
 @import "./_labo-component-variables.scss";
 @import "../node_modules/labo-components/sass/labo-components.scss";
 @import "./_mediasuite.scss";
+@import "index_header";
