enable logout btn

--- a/src/static/sass/components/Header/Header.scss
+++ b/src/static/sass/components/Header/Header.scss
@@ -298,4 +298,9 @@ $accountWidth: 250px;
 }
 .header .right * a {
   color: #fff;
+  text-decoration: none;
+  &.logoutLink {
+    color: $clDark;
+  }
 }
+
